--- a/src/makefile.unix
+++ b/src/makefile.unix
@@ -34,12 +34,10 @@ endif
 # for boost 1.37, add -mt to the boost libraries
 LIBS += \
  -Wl,-B$(LMODE) \
-	../i2pd/libi2pd.a \
 	-l boost_system$(BOOST_LIB_SUFFIX) \
    -l boost_filesystem$(BOOST_LIB_SUFFIX) \
    -l boost_program_options$(BOOST_LIB_SUFFIX) \
    -l boost_thread$(BOOST_LIB_SUFFIX) \
-   -l boost_date_time$(BOOST_LIB_SUFFIX) \
    -l db_cxx$(BDB_LIB_SUFFIX) \
    -l ssl \
    -l crypto
@@ -68,7 +66,7 @@ LIBS+= \
    -l i2psam
 
 # I2P Support
-DEFS +=  -DUSE_NATIVE_I2P -I"../i2psam" -I"../i2pd"
+DEFS +=  -DUSE_NATIVE_I2P -I"../i2psam" 
 LIBS += -L"../i2psam"
 
 # Hardening
@@ -130,6 +128,7 @@ OBJS= \
     obj/keystore.o \
     obj/irc.o \
     obj/i2p.o \
+	obj/Gost.o \
     obj/main.o \
     obj/net.o \
     obj/protocol.o \
