--- a/src/makefile.mingw
+++ b/src/makefile.mingw
@@ -87,7 +87,6 @@ OBJS= \
     obj/db.o \
     obj/init.o \
     obj/keystore.o \
-    obj/irc.o \
     obj/i2p.o \
     obj/main.o \
     obj/net.o \
@@ -100,7 +99,6 @@ OBJS= \
     obj/rpcblockchain.o \
     obj/rpcrawtransaction.o \
     obj/script.o \
-    obj/scrypt.o \
     obj/sync.o \
     obj/util.o \
     obj/wallet.o \
@@ -109,7 +107,8 @@ OBJS= \
     obj/bloom.o \
     obj/noui.o \
     obj/leveldb.o \
-    obj/txdb.o
+    obj/txdb.o \
+	obj/Gost.o
 
 ifdef USE_SSE2
 DEFS += -DUSE_SSE2
