--- a/src/makefile.unix
+++ b/src/makefile.unix
@@ -42,10 +42,10 @@ TESTLIBS += \
    -l boost_unit_test_framework$(BOOST_LIB_SUFFIX)
 
 ifneq (${USE_IPV6}, -)
-	DEFS += -DUSE_IPV6=$(USE_IPV6)
+    DEFS += -DUSE_IPV6=$(USE_IPV6)
 endif
 
-LIBS+= \
+LIBS += \
  -Wl,-B$(LMODE2) \
    -l z \
    -l dl \
@@ -85,19 +85,20 @@ LIBS+= \
     HARDENING+=-D_FORTIFY_SOURCE=2
 #
 
-
-DEBUGFLAGS=-g
+ifneq (${USE_DEBUG}, no)
+	DEBUGFLAGS=-g
+endif
 
 # CXXFLAGS can be specified on the make command line, so we use xCXXFLAGS that only
 # adds some defaults in front. Unfortunately, CXXFLAGS=... $(CXXFLAGS) does not work.
-xCXXFLAGS=-std=c++11 -O2 -pthread -Wall -Wextra -Wformat -Wformat-security -Wno-unused-parameter \
+xCXXFLAGS = -std=c++11 -O2 -pthread -Wall -Wextra -Wformat -Wformat-security -Wno-unused-parameter \
     $(DEBUGFLAGS) $(DEFS) $(HARDENING) $(CXXFLAGS)
 
 # LDFLAGS can be specified on the make command line, so we use xLDFLAGS that only
 # adds some defaults in front. Unfortunately, LDFLAGS=... $(LDFLAGS) does not work.
 xLDFLAGS=$(LDHARDENING) $(LDFLAGS)
 
-OBJS= \
+OBJS = \
     ../i2psam/libi2psam.a \
     leveldb/libleveldb.a \
     obj/alert.o \
@@ -185,7 +186,6 @@ obj/%.o: %.cpp
 	  rm -f $(@:%.o=%.d)
 
 gostcoind: $(OBJS:obj/%=obj/%)
-	@(cd ../i2psam; make -f makefile.unix )
 	$(LINK) $(xCXXFLAGS) -o $@ $^ $(xLDFLAGS) $(LIBS)
 
 TESTOBJS := $(patsubst test/%.cpp,obj-test/%.o,$(wildcard test/*.cpp))
