--- a/src/makefile.mingw
+++ b/src/makefile.mingw
@@ -18,7 +18,7 @@
 CXX ?= g++
 
 USE_IPV6:=1
-USE_DEBUG:=no
+USE_DEBUG:=0
 
 DEPSDIR?=/usr/local
 BOOST_SUFFIX?=-mt
@@ -48,7 +48,7 @@ LIBS= \
 
 DEFS=-D_MT -DWIN32 -D_WINDOWS -DWIN32_LEAN_AND_MEAN -DBOOST_THREAD_USE_LIB -DBOOST_SPIRIT_THREADSAFE
 
-ifneq (${USE_DEBUG}, no)
+ifneq (${USE_DEBUG}, 0)
 	DEBUGFLAGS=-g
 endif
 
