--- a/src/resources.rc
+++ b/src/resources.rc
@@ -1,14 +1,14 @@
-IDI_ICON1 ICON DISCARDABLE "icons/gostcoin.ico"
-IDI_ICON2 ICON DISCARDABLE "icons/bitcoin_testnet.ico"
+IDI_ICON1 ICON DISCARDABLE "qt/res/icons/gostcoin.ico"
+IDI_ICON2 ICON DISCARDABLE "qt/res/icons/bitcoin_testnet.ico"
 
 #include <windows.h>             // needed for VERSIONINFO
-#include "../../clientversion.h" // holds the needed client version information
+#include "clientversion.h"       // holds the needed client version information
 
 #define VER_PRODUCTVERSION     CLIENT_VERSION_MAJOR,CLIENT_VERSION_MINOR,CLIENT_VERSION_REVISION,CLIENT_VERSION_BUILD
 #define VER_PRODUCTVERSION_STR STRINGIZE(CLIENT_VERSION_MAJOR) "." STRINGIZE(CLIENT_VERSION_MINOR) "." STRINGIZE(CLIENT_VERSION_REVISION) "." STRINGIZE(CLIENT_VERSION_BUILD)
 #define VER_FILEVERSION        VER_PRODUCTVERSION
 #define VER_FILEVERSION_STR    VER_PRODUCTVERSION_STR
-#define COPYRIGHT_STR          "2009-" STRINGIZE(COPYRIGHT_YEAR) " The Bitcoin developers 2011-" STRINGIZE(COPYRIGHT_YEAR) " The Litecoin developers " STRINGIZE(COPYRIGHT_YEAR) "The Anoncoin developers" STRINGIZE(COPYRIGHT_YEAR) "The i2pd developers" STRINGIZE(COPYRIGHT_YEAR) "The Gostcoin developers"
+#define COPYRIGHT_STR          "2009-" STRINGIZE(COPYRIGHT_YEAR) " The Bitcoin developers 2011-" STRINGIZE(COPYRIGHT_YEAR) " The Litecoin developers 2013-" STRINGIZE(COPYRIGHT_YEAR) " The Anoncoin developers 2013-" STRINGIZE(COPYRIGHT_YEAR) " The i2pd developers " STRINGIZE(COPYRIGHT_YEAR) " The Gostcoin developers"
 
 VS_VERSION_INFO VERSIONINFO
 FILEVERSION     VER_FILEVERSION
@@ -21,13 +21,13 @@ BEGIN
         BLOCK "040904E4" // U.S. English - multilingual (hex)
         BEGIN
             VALUE "CompanyName",        "GOSTSec"
-            VALUE "FileDescription",    "Gostcoin-Qt (OSS GUI client for Gostcoin)"
+            VALUE "FileDescription",    "Gostcoind (command-line daemon for Gostcoin)"
             VALUE "FileVersion",        VER_FILEVERSION_STR
-            VALUE "InternalName",       "gostcoin-qt"
+            VALUE "InternalName",       "gostcoind"
             VALUE "LegalCopyright",     COPYRIGHT_STR
             VALUE "LegalTrademarks1",   "Distributed under the MIT/X11 software license, see the accompanying file COPYING or http://www.opensource.org/licenses/mit-license.php."
-            VALUE "OriginalFilename",   "gostcoin-qt.exe"
-            VALUE "ProductName",        "Gostcoin-Qt"
+            VALUE "OriginalFilename",   "gostcoind.exe"
+            VALUE "ProductName",        "Gostcoind"
             VALUE "ProductVersion",     VER_PRODUCTVERSION_STR
         END
     END
