--- a/src/qt/res/gostcoin-qt.rc
+++ b/src/qt/res/gostcoin-qt.rc
@@ -1,5 +1,5 @@
 IDI_ICON1 ICON DISCARDABLE "icons/gostcoin.ico"
-IDI_ICON2 ICON DISCARDABLE "icons/bitcoin_testnet.ico"
+IDI_ICON2 ICON DISCARDABLE "icons/gostcoin_testnet.ico"
 
 #include <windows.h>             // needed for VERSIONINFO
 #include "../../clientversion.h" // holds the needed client version information
