--- a/share/qt/Info.plist
+++ b/share/qt/Info.plist
@@ -3,11 +3,11 @@
 <plist version="0.9">
 <dict>
 	<key>CFBundleIconFile</key>
-	<string>anoncoin.icns</string>
+	<string>gostcoin.icns</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleGetInfoString</key>
-	<string>$VERSION, Copyright © 2009-$YEAR The Bitcoin developers</string>
+	<string>$VERSION, Copyright © 2009-$YEAR The Bitcoin developers, 2011-$YEAR The Litecoin developers, 2013-$YEAR The Anoncoin developers, 2017-$YEAR The Gostcoin developers</string>
 	<key>CFBundleShortVersionString</key>
 	<string>$VERSION</string>
 	<key>CFBundleVersion</key>
@@ -15,19 +15,19 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleExecutable</key>
-	<string>Anoncoin-Qt</string>
+	<string>Gostcoin-Qt</string>
 	<key>CFBundleIdentifier</key>
-	<string>net.anoncoin.Anoncoin-Qt</string>
+	<string>org.purplei2p.Gostcoin-Qt</string>
         <key>CFBundleURLTypes</key>
         <array>
           <dict>
             <key>CFBundleTypeRole</key>
             <string>Editor</string>
             <key>CFBundleURLName</key>
-            <string>net.anoncoin.AnoncoinPayment</string>
+            <string>org.purplei2p.GostcoinPayment</string>
             <key>CFBundleURLSchemes</key>
             <array>
-              <string>anoncoin</string>
+              <string>gostcoin</string>
             </array>
           </dict>
         </array>
