--- a/src/makefile.unix
+++ b/src/makefile.unix
@@ -29,61 +29,61 @@ endif
 
 # for boost 1.37, add -mt to the boost libraries
 LIBS += \
-   -Wl,-B$(LMODE) \
-   -l boost_system$(BOOST_LIB_SUFFIX) \
-   -l boost_filesystem$(BOOST_LIB_SUFFIX) \
-   -l boost_program_options$(BOOST_LIB_SUFFIX) \
-   -l boost_thread$(BOOST_LIB_SUFFIX) \
-   -l db_cxx$(BDB_LIB_SUFFIX) \
-   -l ssl \
-   -l crypto
+	-Wl,-B$(LMODE) \
+	-lboost_system$(BOOST_LIB_SUFFIX) \
+	-lboost_filesystem$(BOOST_LIB_SUFFIX) \
+	-lboost_program_options$(BOOST_LIB_SUFFIX) \
+	-lboost_thread$(BOOST_LIB_SUFFIX) \
+	-ldb_cxx$(BDB_LIB_SUFFIX) \
+	-lssl \
+	-lcrypto
 
 TESTLIBS += \
- -Wl,-B$(LMODE) \
-   -l boost_unit_test_framework$(BOOST_LIB_SUFFIX)
+	-Wl,-B$(LMODE) \
+	-lboost_unit_test_framework$(BOOST_LIB_SUFFIX)
 
 ifneq (${USE_IPV6}, -)
-    DEFS += -DUSE_IPV6=$(USE_IPV6)
+	DEFS += -DUSE_IPV6=$(USE_IPV6)
 endif
 
 LIBS += \
- -Wl,-B$(LMODE2) \
-   -l z \
-   -l dl \
-   -l pthread \
-   -l i2psam
+	-Wl,-B$(LMODE2) \
+	-lz \
+	-ldl \
+	-lpthread \
+	-li2psam
 
 # Hardening
 # Make some classes of vulnerabilities unexploitable in case one is discovered.
 #
-    # This is a workaround for Ubuntu bug #691722, the default -fstack-protector causes
-    # -fstack-protector-all to be ignored unless -fno-stack-protector is used first.
-    # see: https://bugs.launchpad.net/ubuntu/+source/gcc-4.5/+bug/691722
-    HARDENING=-fno-stack-protector
+	# This is a workaround for Ubuntu bug #691722, the default -fstack-protector causes
+	# -fstack-protector-all to be ignored unless -fno-stack-protector is used first.
+	# see: https://bugs.launchpad.net/ubuntu/+source/gcc-4.5/+bug/691722
+	HARDENING=-fno-stack-protector
 
-    # Stack Canaries
-    # Put numbers at the beginning of each stack frame and check that they are the same.
-    # If a stack buffer if overflowed, it writes over the canary number and then on return
-    # when that number is checked, it won't be the same and the program will exit with
-    # a "Stack smashing detected" error instead of being exploited.
-    HARDENING+=-fstack-protector-all -Wstack-protector
+	# Stack Canaries
+	# Put numbers at the beginning of each stack frame and check that they are the same.
+	# If a stack buffer if overflowed, it writes over the canary number and then on return
+	# when that number is checked, it won't be the same and the program will exit with
+	# a "Stack smashing detected" error instead of being exploited.
+	HARDENING+=-fstack-protector-all -Wstack-protector
 
-    # Make some important things such as the global offset table read only as soon as
-    # the dynamic linker is finished building it. This will prevent overwriting of addresses
-    # which would later be jumped to.
-    LDHARDENING+=-Wl,-z,relro -Wl,-z,now
+	# Make some important things such as the global offset table read only as soon as
+	# the dynamic linker is finished building it. This will prevent overwriting of addresses
+	# which would later be jumped to.
+	LDHARDENING+=-Wl,-z,relro -Wl,-z,now
 
-    # Build position independent code to take advantage of Address Space Layout Randomization
-    # offered by some kernels.
-    # see doc/build-unix.txt for more information.
-    ifdef PIE
-        HARDENING+=-fPIE
-        LDHARDENING+=-pie
-    endif
+	# Build position independent code to take advantage of Address Space Layout Randomization
+	# offered by some kernels.
+	# see doc/build-unix.txt for more information.
+	ifdef PIE
+		HARDENING+=-fPIE
+		LDHARDENING+=-pie
+	endif
 
-    # -D_FORTIFY_SOURCE=2 does some checking for potentially exploitable code patterns in
-    # the source such overflowing a statically defined buffer.
-    HARDENING+=-D_FORTIFY_SOURCE=2
+	# -D_FORTIFY_SOURCE=2 does some checking for potentially exploitable code patterns in
+	# the source such overflowing a statically defined buffer.
+	HARDENING+=-D_FORTIFY_SOURCE=2
 #
 
 ifneq (${USE_DEBUG}, 0)
@@ -93,54 +93,47 @@ endif
 # CXXFLAGS can be specified on the make command line, so we use xCXXFLAGS that only
 # adds some defaults in front. Unfortunately, CXXFLAGS=... $(CXXFLAGS) does not work.
 xCXXFLAGS = -std=c++11 -O2 -pthread -Wall -Wextra -Wformat -Wformat-security -Wno-unused-parameter \
-    $(DEBUGFLAGS) $(DEFS) $(HARDENING) $(CXXFLAGS)
+	$(DEBUGFLAGS) $(DEFS) $(HARDENING) $(CXXFLAGS)
 
 # LDFLAGS can be specified on the make command line, so we use xLDFLAGS that only
 # adds some defaults in front. Unfortunately, LDFLAGS=... $(LDFLAGS) does not work.
 xLDFLAGS=$(LDHARDENING) $(LDFLAGS)
 
 OBJS = \
-    ../i2psam/libi2psam.a \
-    leveldb/libleveldb.a \
-    obj/alert.o \
-    obj/version.o \
-    obj/checkpoints.o \
-    obj/netbase.o \
-    obj/addrman.o \
-    obj/crypter.o \
-    obj/key.o \
-    obj/db.o \
-    obj/init.o \
-    obj/keystore.o \
-    obj/i2p.o \
-    obj/Gost.o \
-    obj/main.o \
-    obj/net.o \
-    obj/protocol.o \
-    obj/bitcoinrpc.o \
-    obj/rpcdump.o \
-    obj/rpcnet.o \
-    obj/rpcmining.o \
-    obj/rpcwallet.o \
-    obj/rpcblockchain.o \
-    obj/rpcrawtransaction.o \
-    obj/script.o \
-    obj/sync.o \
-    obj/util.o \
-    obj/wallet.o \
-    obj/walletdb.o \
-    obj/hash.o \
-    obj/bloom.o \
-    obj/noui.o \
-    obj/leveldb.o \
-    obj/txdb.o
-
-
-ifdef USE_SSE2
-DEFS += -DUSE_SSE2
-OBJS_SSE2= obj/scrypt-sse2.o
-OBJS += $(OBJS_SSE2)
-endif
+	i2psam/libi2psam.a \
+	leveldb/libleveldb.a \
+	obj/alert.o \
+	obj/version.o \
+	obj/checkpoints.o \
+	obj/netbase.o \
+	obj/addrman.o \
+	obj/crypter.o \
+	obj/key.o \
+	obj/db.o \
+	obj/init.o \
+	obj/keystore.o \
+	obj/i2p.o \
+	obj/Gost.o \
+	obj/main.o \
+	obj/net.o \
+	obj/protocol.o \
+	obj/bitcoinrpc.o \
+	obj/rpcdump.o \
+	obj/rpcnet.o \
+	obj/rpcmining.o \
+	obj/rpcwallet.o \
+	obj/rpcblockchain.o \
+	obj/rpcrawtransaction.o \
+	obj/script.o \
+	obj/sync.o \
+	obj/util.o \
+	obj/wallet.o \
+	obj/walletdb.o \
+	obj/hash.o \
+	obj/bloom.o \
+	obj/noui.o \
+	obj/leveldb.o \
+	obj/txdb.o
 
 all: gostcoind
 
@@ -154,14 +147,16 @@ MAKEOVERRIDES =
 LIBS += $(CURDIR)/leveldb/libleveldb.a $(CURDIR)/leveldb/libmemenv.a
 DEFS += $(addprefix -I,$(CURDIR)/leveldb/include)
 DEFS += $(addprefix -I,$(CURDIR)/leveldb/helpers)
+
 leveldb/libleveldb.a:
 	@echo "Building LevelDB ..." && cd leveldb && $(MAKE) CC=$(CC) CXX=$(CXX) OPT="$(xCXXFLAGS)" libleveldb.a libmemenv.a && cd ..
 
 # I2P Support
-LIBS += -L"../i2psam"
-DEFS +=  -DUSE_NATIVE_I2P -I"../i2psam" 
-../i2psam/libi2psam.a:
-	@echo "Building libi2psam ..." && cd ../i2psam && $(MAKE) -f makefile.unix && cd ../src
+LIBS += -L"i2psam"
+DEFS +=  -DUSE_NATIVE_I2P -I"i2psam"
+
+i2psam/libi2psam.a:
+	@echo "Building libi2psam ..." && cd i2psam && $(MAKE) -f makefile.unix && cd ..
 
 # auto-generated dependencies:
 -include obj/*.P
@@ -169,22 +164,24 @@ DEFS +=  -DUSE_NATIVE_I2P -I"../i2psam"
 
 obj/build.h: FORCE
 	/bin/sh ../share/genbuild.sh obj/build.h
+
 version.cpp: obj/build.h
+
 DEFS += -DHAVE_BUILD_INFO
 
 obj/%-sse2.o: %-sse2.cpp
 	$(CXX) -c $(xCXXFLAGS) -msse2 -MMD -MF $(@:%.o=%.d) -o $@ $<
 	@cp $(@:%.o=%.d) $(@:%.o=%.P); \
-	  sed -e 's/#.*//' -e 's/^[^:]*: *//' -e 's/ *\\$$//' \
-	      -e '/^$$/ d' -e 's/$$/ :/' < $(@:%.o=%.d) >> $(@:%.o=%.P); \
-	  rm -f $(@:%.o=%.d)
+		sed -e 's/#.*//' -e 's/^[^:]*: *//' -e 's/ *\\$$//' \
+		-e '/^$$/ d' -e 's/$$/ :/' < $(@:%.o=%.d) >> $(@:%.o=%.P); \
+		rm -f $(@:%.o=%.d)
 
 obj/%.o: %.cpp
 	$(CXX) -c $(xCXXFLAGS) -MMD -MF $(@:%.o=%.d) -o $@ $<
 	@cp $(@:%.o=%.d) $(@:%.o=%.P); \
-	  sed -e 's/#.*//' -e 's/^[^:]*: *//' -e 's/ *\\$$//' \
-	      -e '/^$$/ d' -e 's/$$/ :/' < $(@:%.o=%.d) >> $(@:%.o=%.P); \
-	  rm -f $(@:%.o=%.d)
+		sed -e 's/#.*//' -e 's/^[^:]*: *//' -e 's/ *\\$$//' \
+		-e '/^$$/ d' -e 's/$$/ :/' < $(@:%.o=%.d) >> $(@:%.o=%.P); \
+		rm -f $(@:%.o=%.d)
 
 gostcoind: $(OBJS:obj/%=obj/%)
 	$(LINK) $(xCXXFLAGS) -o $@ $^ $(xLDFLAGS) $(LIBS)
@@ -194,9 +191,9 @@ TESTOBJS := $(patsubst test/%.cpp,obj-test/%.o,$(wildcard test/*.cpp))
 obj-test/%.o: test/%.cpp
 	$(CXX) -c $(TESTDEFS) $(xCXXFLAGS) -MMD -MF $(@:%.o=%.d) -o $@ $<
 	@cp $(@:%.o=%.d) $(@:%.o=%.P); \
-	  sed -e 's/#.*//' -e 's/^[^:]*: *//' -e 's/ *\\$$//' \
-	      -e '/^$$/ d' -e 's/$$/ :/' < $(@:%.o=%.d) >> $(@:%.o=%.P); \
-	  rm -f $(@:%.o=%.d)
+		sed -e 's/#.*//' -e 's/^[^:]*: *//' -e 's/ *\\$$//' \
+		-e '/^$$/ d' -e 's/$$/ :/' < $(@:%.o=%.d) >> $(@:%.o=%.P); \
+		rm -f $(@:%.o=%.d)
 
 test_gostcoin: $(TESTOBJS) $(filter-out obj/init.o,$(OBJS:obj/%=obj/%))
 	$(LINK) $(xCXXFLAGS) -o $@ $(LIBPATHS) $^ $(TESTLIBS) $(xLDFLAGS) $(LIBS)
@@ -208,7 +205,7 @@ clean:
 	-rm -f obj/*.P
 	-rm -f obj-test/*.P
 	-rm -f obj/build.h
-	-cd ../i2psam && $(MAKE) -f makefile.unix clean || true
+	-cd i2psam && $(MAKE) -f makefile.unix clean || true
 	-cd leveldb && $(MAKE) clean || true
 
 FORCE:
