--- a/src/makefile.osx
+++ b/src/makefile.osx
@@ -57,7 +57,7 @@ LIBS += \
 TESTDEFS += -DBOOST_TEST_DYN_LINK
 endif
 
-DEFS=-DMAC_OSX -DMSG_NOSIGNAL=0 -DBOOST_SPIRIT_THREADSAFE -DUSE_NATIVE_I2P
+DEFS=-DMAC_OSX -DMSG_NOSIGNAL=0 -DBOOST_SPIRIT_THREADSAFE -DBOOST_ASIO_ENABLE_OLD_SERVICES -DUSE_NATIVE_I2P
 
 ifdef RELEASE
 # Compile for maximum compatibility and smallest size.
