--- a/src/makefile.mingw
+++ b/src/makefile.mingw
@@ -45,7 +45,7 @@ LIBS= \
  -lssl \
  -lcrypto
 
-DEFS=-D_MT -DWIN32 -D_WINDOWS -DWIN32_LEAN_AND_MEAN -DBOOST_THREAD_USE_LIB -DBOOST_SPIRIT_THREADSAFE -DUSE_NATIVE_I2P
+DEFS=-D_MT -DWIN32 -D_WINDOWS -DWIN32_LEAN_AND_MEAN -DBOOST_THREAD_USE_LIB -DBOOST_SPIRIT_THREADSAFE -DBOOST_ASIO_ENABLE_OLD_SERVICES -DUSE_NATIVE_I2P
 
 ifneq (${USE_DEBUG}, 0)
 	DEBUGFLAGS=-g
