--- a/src/resources.rc
+++ b/src/resources.rc
@@ -8,7 +8,7 @@ IDI_ICON2 ICON DISCARDABLE "qt/res/icons/gostcoin_testnet.ico"
 #define VER_PRODUCTVERSION_STR STRINGIZE(CLIENT_VERSION_MAJOR) "." STRINGIZE(CLIENT_VERSION_MINOR) "." STRINGIZE(CLIENT_VERSION_REVISION) "." STRINGIZE(CLIENT_VERSION_BUILD)
 #define VER_FILEVERSION        VER_PRODUCTVERSION
 #define VER_FILEVERSION_STR    VER_PRODUCTVERSION_STR
-#define COPYRIGHT_STR          "2009-" STRINGIZE(COPYRIGHT_YEAR) " The Bitcoin developers, 2011-" STRINGIZE(COPYRIGHT_YEAR) " The Litecoin developers, 2013-" STRINGIZE(COPYRIGHT_YEAR) " The Anoncoin developers, 2013-" STRINGIZE(COPYRIGHT_YEAR) " The i2pd developers, " STRINGIZE(COPYRIGHT_YEAR) " The Gostcoin developers"
+#define COPYRIGHT_STR          "2009-" STRINGIZE(COPYRIGHT_YEAR) " The Bitcoin developers, 2011-" STRINGIZE(COPYRIGHT_YEAR) " The Litecoin developers, 2013-" STRINGIZE(COPYRIGHT_YEAR) " The Anoncoin developers, 2013-" STRINGIZE(COPYRIGHT_YEAR) " The i2pd developers, 2017-" STRINGIZE(COPYRIGHT_YEAR) " The Gostcoin developers"
 
 VS_VERSION_INFO VERSIONINFO
 FILEVERSION     VER_FILEVERSION
