makefile/pro: link boost_chrono
Fixes build failure due to undefined symbol (tested on Arch Linux).

--- a/src/makefile.unix
+++ b/src/makefile.unix
@@ -34,6 +34,7 @@ LIBS += \
 	-lboost_filesystem$(BOOST_LIB_SUFFIX) \
 	-lboost_program_options$(BOOST_LIB_SUFFIX) \
 	-lboost_thread$(BOOST_LIB_SUFFIX) \
+	-lboost_chrono$(BOOST_LIB_SUFFIX) \
 	-ldb_cxx$(BDB_LIB_SUFFIX) \
 	-lssl \
 	-lcrypto
