--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
-<manifest package="org.purplei2p.gostcoin" xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="0.8.5.12" android:versionCode="1" android:installLocation="auto">
+<manifest package="org.gostsec.gostcoin" xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="0.8.5.12" android:versionCode="11" android:installLocation="auto">
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <application android:hardwareAccelerated="true" android:name="org.qtproject.qt5.android.bindings.QtApplication" android:label="GostCoin">
+    <application android:hardwareAccelerated="true" android:name="org.qtproject.qt5.android.bindings.QtApplication" android:label="GostCoin" android:icon="@drawable/icon">
         <!-- <activity android:configChanges="orientation|uiMode|screenLayout|screenSize|smallestScreenSize|layoutDirection|locale|fontScale|keyboard|keyboardHidden|navigation"
         -->
         <activity android:name="org.qtproject.qt5.android.bindings.QtActivity" android:label="GostCoin" android:screenOrientation="unspecified" android:launchMode="singleTop">
@@ -61,7 +61,7 @@ https://bugreports.qt.io/browse/QTBUG-50759
 
 если ставишь таргет апи 25 то сегфолт на create_directory(/sdcard/gostcoin)
 -->
-    <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="22"/>
+    <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="22"/>
     <supports-screens android:largeScreens="true" android:normalScreens="true" android:anyDensity="true" android:smallScreens="true"/>
 
     <!-- The following comment will be replaced upon deployment with default permissions based on the dependencies of the application.
@@ -71,5 +71,4 @@ https://bugreports.qt.io/browse/QTBUG-50759
     <!-- The following comment will be replaced upon deployment with default features based on the dependencies of the application.
          Remove the comment if you do not require these default features. -->
     <!-- %%INSERT_FEATURES -->
-
 </manifest>
