--- a/src/makefile.mingw
+++ b/src/makefile.mingw
@@ -41,7 +41,7 @@ LIBS= \
  $(MINGW_PREFIX)/lib/libboost_chrono-mt.a \
  $(MINGW_PREFIX)/lib/libssl.a \
  $(MINGW_PREFIX)/lib/libcrypto.a \
- $(MINGW_PREFIX)/lib/libdb_cxx.a \
+ $(MINGW_PREFIX)/lib/libdb_cxx-6.0.a \
  -lcrypt32
 
 DEFS=-D_MT -DWIN32 -D_WINDOWS -DWIN32_LEAN_AND_MEAN -DBOOST_THREAD_USE_LIB -DBOOST_SPIRIT_THREADSAFE -DBOOST_ASIO_ENABLE_OLD_SERVICES -DUSE_NATIVE_I2P
